--- a/play/index.html
+++ b/play/index.html
@@ -13,41 +13,41 @@
 <link data-react-helmet="true" rel="shortcut icon" href="/images/favicon.ico">
 
 
-<link rel="stylesheet" href="/styles.38eff7c3.css">
+<link rel="stylesheet" href="/styles.69dda9b9.css">
 
 <link rel="stylesheet" href="/main.69618293.css">
 
 
-<link rel="preload" href="/styles.d96b78fc.js" as="script">
+<link rel="preload" href="/styles.016d270d.js" as="script">
 
-<link rel="preload" href="/runtime~main.a87de4e3.js" as="script">
+<link rel="preload" href="/runtime~main.a4cf5ffe.js" as="script">
 
-<link rel="preload" href="/main.fe444d48.js" as="script">
+<link rel="preload" href="/main.8468d7f2.js" as="script">
 
-<link rel="preload" href="/1.26a7f959.js" as="script">
+<link rel="preload" href="/1.fe91502c.js" as="script">
 
-<link rel="preload" href="/2.37c71318.js" as="script">
+<link rel="preload" href="/2.1fe91840.js" as="script">
 
-<link rel="preload" href="/45aa4c23.5c89c053.js" as="script">
+<link rel="preload" href="/45aa4c23.32261bdf.js" as="script">
 
 </head>
 <body>
 <script>!function(){function t(t){document.documentElement.setAttribute("data-theme",t)}var e=window.matchMedia("(prefers-color-scheme: dark)"),n=function(){var t=null;try{t=localStorage.getItem("theme")}catch(t){}return t}();null!==n?t(n):e.matches&&t("dark")}()</script>
 <div id="__docusaurus">
-<nav class="navbar navbar--light navbar--fixed-top"><div class="navbar__inner"><div class="navbar__items"><div aria-label="Navigation bar toggle" class="navbar__toggle" role="button" tabindex="0"><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 30 30" role="img" focusable="false"><title>Menu</title><path stroke="currentColor" stroke-linecap="round" stroke-miterlimit="10" stroke-width="2" d="M4 7h22M4 15h22M4 23h22"></path></svg></div><a aria-current="page" class="navbar__brand active" href="/"><img class="navbar__logo" src="/images/logo.png"><strong class="navbar__title">TypeScriptToLua</strong></a><a class="navbar__item navbar__link" href="/docs/getting-started">Docs</a><a aria-current="page" class="navbar__item navbar__link navbar__link--active" href="/play">Playground</a></div><div class="navbar__items navbar__items--right"><a target="_blank" rel="noopener noreferrer" href="https://discord.gg/BWAq58Y" class="navbar__item navbar__link">Discord</a><a target="_blank" rel="noopener noreferrer" href="https://github.com/TypeScriptToLua/TypeScriptToLua" class="navbar__item navbar__link">GitHub</a><div class="react-toggle react-toggle--disabled displayOnlyInLargeViewport_1gtM"><div class="react-toggle-track"><div class="react-toggle-track-check"><span class="toggle_keGJ moon_1gwN"></span></div><div class="react-toggle-track-x"><span class="toggle_keGJ sun_3CPA"></span></div></div><div class="react-toggle-thumb"></div><input type="checkbox" disabled="" aria-label="Dark mode toggle" class="react-toggle-screenreader-only"></div></div></div><div role="presentation" class="navbar-sidebar__backdrop"></div><div class="navbar-sidebar"><div class="navbar-sidebar__brand"><a aria-current="page" class="navbar__brand active" href="/"><img class="navbar__logo" src="/images/logo.png"><strong class="navbar__title">TypeScriptToLua</strong></a></div><div class="navbar-sidebar__items"><div class="menu"><ul class="menu__list"><li class="menu__list-item"><a class="menu__link" href="/docs/getting-started">Docs</a></li><li class="menu__list-item"><a aria-current="page" class="menu__link navbar__link--active" href="/play">Playground</a></li><li class="menu__list-item"><a target="_blank" rel="noopener noreferrer" href="https://discord.gg/BWAq58Y" class="menu__link">Discord</a></li><li class="menu__list-item"><a target="_blank" rel="noopener noreferrer" href="https://github.com/TypeScriptToLua/TypeScriptToLua" class="menu__link">GitHub</a></li></ul></div></div></div></nav><div class="main-wrapper"></div>
+<nav class="navbar navbar--light navbar--fixed-top"><div class="navbar__inner"><div class="navbar__items"><div aria-label="Navigation bar toggle" class="navbar__toggle" role="button" tabindex="0"><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 30 30" role="img" focusable="false"><title>Menu</title><path stroke="currentColor" stroke-linecap="round" stroke-miterlimit="10" stroke-width="2" d="M4 7h22M4 15h22M4 23h22"></path></svg></div><a aria-current="page" class="navbar__brand active" href="/"><img class="navbar__logo" src="/images/logo.png"><strong class="navbar__title">TypeScriptToLua</strong></a><a class="navbar__item navbar__link" href="/docs/getting-started">Docs</a><a aria-current="page" class="navbar__item navbar__link navbar__link--active" href="/play">Playground</a></div><div class="navbar__items navbar__items--right"><a target="_blank" rel="noopener noreferrer" href="https://discord.gg/BWAq58Y" class="navbar__item navbar__link">Discord</a><a target="_blank" rel="noopener noreferrer" href="https://github.com/TypeScriptToLua/TypeScriptToLua" class="navbar__item navbar__link">GitHub</a><div class="react-toggle react-toggle--disabled displayOnlyInLargeViewport_1gtM"><div class="react-toggle-track"><div class="react-toggle-track-check"><span class="toggle_keGJ moon_1gwN"></span></div><div class="react-toggle-track-x"><span class="toggle_keGJ sun_3CPA"></span></div></div><div class="react-toggle-thumb"></div><input type="checkbox" disabled="" aria-label="Dark mode toggle" class="react-toggle-screenreader-only"></div><div class="navbar__search"><span aria-label="expand searchbar" role="button" class="search-icon" tabindex="0"></span><input type="search" id="search_input_react" placeholder="Search" aria-label="Search" class="navbar__search-input search-bar"></div></div></div><div role="presentation" class="navbar-sidebar__backdrop"></div><div class="navbar-sidebar"><div class="navbar-sidebar__brand"><a aria-current="page" class="navbar__brand active" href="/"><img class="navbar__logo" src="/images/logo.png"><strong class="navbar__title">TypeScriptToLua</strong></a></div><div class="navbar-sidebar__items"><div class="menu"><ul class="menu__list"><li class="menu__list-item"><a class="menu__link" href="/docs/getting-started">Docs</a></li><li class="menu__list-item"><a aria-current="page" class="menu__link navbar__link--active" href="/play">Playground</a></li><li class="menu__list-item"><a target="_blank" rel="noopener noreferrer" href="https://discord.gg/BWAq58Y" class="menu__link">Discord</a></li><li class="menu__list-item"><a target="_blank" rel="noopener noreferrer" href="https://github.com/TypeScriptToLua/TypeScriptToLua" class="menu__link">GitHub</a></li></ul></div></div></div></nav><div class="main-wrapper"></div>
 </div>
 
-<script src="/styles.d96b78fc.js"></script>
+<script src="/styles.016d270d.js"></script>
 
-<script src="/runtime~main.a87de4e3.js"></script>
+<script src="/runtime~main.a4cf5ffe.js"></script>
 
-<script src="/main.fe444d48.js"></script>
+<script src="/main.8468d7f2.js"></script>
 
-<script src="/1.26a7f959.js"></script>
+<script src="/1.fe91502c.js"></script>
 
-<script src="/2.37c71318.js"></script>
+<script src="/2.1fe91840.js"></script>
 
-<script src="/45aa4c23.5c89c053.js"></script>
+<script src="/45aa4c23.32261bdf.js"></script>
 
 
 </body>
